<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                             tools:context="com.example.android.notekeeper.NoteActivity"
                                             tools:showIn="@layout/activity_note">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:max="3"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/spinner_course"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone"/>

    <Spinner
        android:id="@+id/spinner_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:nextFocusRight="@+id/text_note_title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/text_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/note_title_hint"
        android:inputType="textMultiLine"
        android:nextFocusRight="@+id/text_note_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/spinner_course"
        app:layout_constraintRight_toRightOf="@+id/spinner_course"
        app:layout_constraintTop_toBottomOf="@+id/spinner_course"/>

    <EditText
        android:id="@+id/text_note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/note_text_hint"
        android:inputType="textMultiLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/text_note_title"
        app:layout_constraintRight_toRightOf="@+id/text_note_title"
        app:layout_constraintTop_toBottomOf="@+id/text_note_title"/>

    <view
        android:id="@+id/module_status"
        class="com.example.android.notekeeper.ModuleStatusView"
        id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="-382dp"
        android:padding="5dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/text_note_text"
        app:layout_constraintRight_toRightOf="@+id/text_note_text"
        app:layout_constraintTop_toBottomOf="@+id/text_note_text"
        app:outlineColor="#ff0000"
        app:outlineWidth="5dp"
        app:shape="square"/>

</android.support.constraint.ConstraintLayout>
